# control-plane-kit-servers

./: .gitignore  AGENTS.md  Dockerfile.test  GIT-FLOW.md  README.md  pyproject.toml  test.sh
.github/workflows/: publish-product-image.yml  tests.yml
catalogue/: products.json
coordinates/: server-products.json
coordination/: core-release-candidate.json  extract-f-804-cpk-server-handoff.json  product-inventory.json
docs/: issue-transfer-strategy.md  product-layouts.md
docs/decisions/: 0001-repository-foundation.md  0002-server-repository-policy.md  0003-package-metadata-and-catalogue-entrance.md  0004-docker-first-test-and-image-harness.md  0005-descriptor-catalogue-publication.md  0006-cpk-server-process-composition.md  0007-cpk-server-http-mcp-boundaries.md  0008-cpk-server-oci-image.md  0009-cpk-server-product-descriptor.md
docs/learning/: extract-f-run-0001.md
docs/security/: 0001-foundation-review.md
products/: README.md
products/cpk_server/: Dockerfile  bootstrap.contract.json  product.cpk.json
products/cpk_server/docs/: composition.md
products/cpk_server/law-cards/: extract-f-813.json  extract-f-814.json
products/cpk_server/src/control_plane_kit_servers_cpk_server/: __init__.py  boundary.py  composition.py  server.py
products/cpk_server/tests/: test_http_mcp_boundaries.py  test_image_bootstrap.py  test_process_composition.py  test_product_descriptor.py
products/hello_server/: Dockerfile  product.cpk.json
products/hello_server/src/control_plane_kit_servers_hello_server/: __init__.py  server.py
products/hello_server/tests/: test_hello_server_product.py
products/http_active_router/: Dockerfile  product.cpk.json
products/http_active_router/src/control_plane_kit_servers_http_active_router/: __init__.py  server.py
products/http_active_router/tests/: test_http_active_router_product.py
products/http_multiplexer/: Dockerfile  product.cpk.json
products/http_multiplexer/src/control_plane_kit_servers_http_multiplexer/: __init__.py  server.py
products/http_multiplexer/tests/: test_http_multiplexer_product.py
products/postgres_server/: product.cpk.json
products/postgres_server/tests/: test_postgres_server_product.py
scripts/: apply_coordinates.py  cpk_server_hosted_activity.py  cpk_server_hosted_activity_smoke.sh  cpk_server_image_smoke.sh  cpk_server_published_image_smoke.sh  cpk_server_recursive_activity.py  cpk_server_recursive_activity_smoke.sh  docker_residue_audit.sh  hello_server_image_smoke.sh  hello_server_published_image_smoke.sh  http_active_router_image_smoke.sh  http_active_router_published_image_smoke.sh  http_multiplexer_image_smoke.sh  http_multiplexer_published_image_smoke.sh  postgres_server_image_smoke.sh  product_image_lane.py  publish_catalogue.py  publish_product_image.sh  run_all_tests.py
src/control_plane_kit_servers/: __init__.py  catalogue.json  catalogue.json.sha256  catalogue.py
tests/: test_coordinates.py  test_descriptor_catalogue.py  test_docker_harness.py  test_package_metadata.py  test_repository_policy.py
