[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "control-plane-kit-servers"
version = "0.1.0"
description = "Reusable OCI server products and descriptors for control-plane-kit"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "control-plane-kit-core @ https://github.com/OpenJ92/control-plane-kit/archive/82ced0ddc2749bbc5b8263ffbdb29659c7dbe936.zip#subdirectory=control-plane-kit-core",
  "control-plane-kit-operations @ https://github.com/OpenJ92/control-plane-kit/archive/82ced0ddc2749bbc5b8263ffbdb29659c7dbe936.zip#subdirectory=control-plane-kit-operations",
  "control-plane-kit-interpreters[docker] @ https://github.com/OpenJ92/control-plane-kit-interpreters/archive/797ae3109c03ff4451476f4760785f08ec5834cd.zip",
  "fastapi>=0.115",
  "uvicorn>=0.30",
]

[tool.setuptools.packages.find]
where = ["src", "products/cpk_server/src", "products/hello_server/src", "products/http_active_router/src", "products/http_multiplexer/src"]

[tool.setuptools.package-data]
control_plane_kit_servers = ["catalogue.json", "catalogue.json.sha256"]
