[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "control-plane-kit-servers"
version = "0.1.0"
description = "Reusable OCI server products and descriptors for control-plane-kit"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "control-plane-kit-core @ https://github.com/OpenJ92/control-plane-kit/archive/8f6201d4302dae443b7a0e7ff34ead90244c039e.zip#subdirectory=control-plane-kit-core",
  "control-plane-kit-operations @ https://github.com/OpenJ92/control-plane-kit/archive/8f6201d4302dae443b7a0e7ff34ead90244c039e.zip#subdirectory=control-plane-kit-operations",
  "control-plane-kit-interpreters[docker] @ https://github.com/OpenJ92/control-plane-kit-interpreters/archive/0a34dd40c08ff86de737747325d3cfc5fca4f0f9.zip",
  "fastapi>=0.115",
  "uvicorn>=0.30",
]

[tool.setuptools.packages.find]
where = ["src", "products/cpk_server/src", "products/hello_server/src", "products/http_active_router/src", "products/http_multiplexer/src"]

[tool.setuptools.package-data]
control_plane_kit_servers = ["catalogue.json", "catalogue.json.sha256"]
